Adding guest voters module
