# backend/src/routes/index.ts
@@ -4,6 +4,7 @@ import authRoutes from '../modules/account/account.routes';
 import sessionRoutes from '../modules/session/session.routes';
 import candidateRoutes from '../modules/candidate/candidate.routes';
 import votesRoutes from '../modules/vote/vote.routes';
+import guestVotersRoutes from '../modules/guest-voter/guest-voter.routes';
 
 const routes = express.Router();
 
@@ -12,5 +13,6 @@ routes.use('/accounts', authRoutes);
 routes.use('/sessions', sessionRoutes);
 routes.use('/candidates', candidateRoutes);
 routes.use('/votes', votesRoutes);
+routes.use('/guest-voters', guestVotersRoutes);
 
 export default routes;
